--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.29.0
-pandas==2.1.3
-numpy==1.26.2
-plotly==5.18.0
-Pillow==10.1.0
-scipy==1.11.4
+streamlit
+pandas
+numpy
+plotly
+openpyxl
